# rotel-lambda-forwarder

./: CHANGELOG_S3_FEATURE.md  Cargo.toml  DEVELOPING.md  Dockerfile  Makefile  README.md  RELEASING.md  rust-toolchain.toml
.github/workflows/: auto-release.yml  auto-tag.yml  bump-version.yml  ci.yml  pre-release.yml  release.yml
cloudformation-stacks/: forwarder-clickhouse.template.yaml  forwarder-otlp.template.yaml
d9/7a3932db7f/: metadata.json
d9/7a3932db7f/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
docs/: S3_IMPLEMENTATION_SUMMARY.md  S3_LOG_PROCESSING.md  S3_QUICK_START.md
examples/: s3-event-notification.json
examples/processors/: parse_vpc_logs.py
scripts/: bundle-zip.sh  deploy-lambda.sh
src/: aws_attributes.rs  events.rs  lib.rs  log_processors.rs  main.rs  s3_cache.rs
src/cwlogs/: mod.rs  record_parser.rs
src/flowlogs/: cache.rs  ec2.rs  mod.rs
src/forward/: acker.rs  flusher.rs  forwarder.rs  mod.rs
src/init/: env.rs  logging.rs
src/parse/: cwlogs.rs  field_stripper.rs  json.rs  keyvalue.rs  mod.rs  platform.rs  record_parser.rs  utils.rs  vpclog.rs
src/parse/s3logs/: memory_semaphore.rs  mod.rs  s3record.rs
src/s3logs/: json_blob.rs  mod.rs  s3record.rs
src/tags/: cache.rs  cloudwatch.rs  mod.rs  s3.rs
