[package]
name = "rotel-lambda-forwarder"
version = "0.1.1"
edition = "2024"
homepage = "https://github.com/streamfold/rotel-lambda-forwarder"
readme = "README.md"

[dependencies]
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["cloudwatch_logs"] }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = "1.115"
aws-sdk-ec2 = "1.200"
aws-sdk-s3 = "1.120"
hex = "0.4"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "ring"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
lambda_runtime = { version = "1.0.1", features = ["graceful-shutdown"] }
lambda_runtime_api_client = "1.0.1"
async-stream = "0.3"
http-body-util = "0.1"
http = "1.0"
tokio-stream = "0.1"
regex = "1.10"
rustls = "0.23.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7.13"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["retry", "timeout"] }
dotenvy = { git = "https://github.com/streamfold/dotenvy", branch = "custom-substitution" }
rotel = { git = "https://github.com/streamfold/rotel", rev = "v0.1.9", default-features = false, optional = true }
lambda-extension = "1.0.1"
opentelemetry-proto = "0.30.0"
flate2 = "1.1"

[dev-dependencies]
futures-util = "0.3"

[features]
default = ["rotel"]
pyo3 = ["rotel/pyo3"]
